# cognate

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCS_INDEX.md  GETTING_STARTED.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  publish.yml
cognate/: Cargo.toml
cognate-axum/: Cargo.toml
cognate-axum/examples/: chatgpt_clone.rs
cognate-axum/src/: lib.rs
cognate-cli/: Cargo.toml
cognate-cli/src/: main.rs
cognate-core/: Cargo.toml
cognate-core/src/: error.rs  lib.rs  middleware.rs  mock.rs  ratelimit.rs  types.rs
cognate-prompts/: Cargo.toml
cognate-prompts-derive/: Cargo.toml
cognate-prompts-derive/src/: lib.rs
cognate-prompts/examples/: prompt_usage.rs
cognate-prompts/src/: lib.rs
cognate-providers/: Cargo.toml
cognate-providers/examples/: simple_chat.rs  streaming_chat.rs
cognate-providers/src/: anthropic.rs  costs.rs  fallback.rs  lib.rs  openai.rs  retry.rs  sse.rs
cognate-rag/: Cargo.toml
cognate-rag/examples/: rag_pipeline.rs
cognate-rag/src/: lib.rs  memory.rs
cognate-tools/: Cargo.toml
cognate-tools-derive/: Cargo.toml
cognate-tools-derive/src/: lib.rs
cognate-tools/examples/: agent.rs  tool_usage.rs
cognate-tools/src/: executor.rs  lib.rs
cognate/src/: lib.rs
