[package]
name = "cognate-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI tool for interacting with LLM providers via Cognate"
repository = "https://github.com/vornyx-rs/Cognate"
readme = "../README.md"

[dependencies]
cognate-core = { path = "../cognate-core", version = "0.1" }
cognate-providers = { path = "../cognate-providers", version = "0.1" }
tokio = { workspace = true }
