[package]
name = "cognate-prompts-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Procedural macros for compile-time validated prompt templates in Cognate"
repository = "https://github.com/vornyx-rs/Cognate"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
