[package]
name = "cognate-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OpenAI, Anthropic, and other LLM provider implementations for Cognate"
repository = "https://github.com/vornyx-rs/Cognate"
readme = "../README.md"

[dependencies]
cognate-core = { path = "../cognate-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

[[example]]
name = "simple_chat"

[[example]]
name = "streaming_chat"
